# Campix

./: .gitignore  Cargo.toml  build-debug  build-release  debug.gdb  linker.ld  rustc-ice-2025-06-01T19_45_24-616739.txt  rustc-ice-2025-06-01T19_45_24-616740.txt  x86_64-unknown-none.json
.cargo/: config.toml
src/: bios.rs  config.rs  e9.rs  gdt.rs  io.rs  lib.rs  log.rs  memory.rs  obsiboot.rs  paging.rs  percpu.rs  syscalls.rs  vesa.rs
src/data/: assign_once.rs  bitmap.rs  bitset_enum.rs  either.rs  file.rs  mod.rs  permissions.rs
src/data/partition/: gpt.rs  mbr.rs  mod.rs
src/data/regs/: cr.rs  fs_gs_base.rs  mod.rs  msr.rs  rflags.rs
src/drivers/: keyboard.rs  mod.rs  pci.rs  time.rs  vfs.rs  vga.rs
src/drivers/disk/: mod.rs  pata.rs
src/drivers/fs/phys/ext2/: balloc.rs  blockgroup.rs  file.rs  ialloc.rs  inode.rs  mod.rs  superblock.rs
src/drivers/fs/virt/: devfs.rs  mod.rs  pipefs.rs
src/drivers/fs/virt/files/: dev_null.rs  (+1 more)
src/drivers/ports/: e9.rs  mod.rs  parallel.rs
src/formats/: elf.rs
src/interrupts/: idt.asm  idt.rs  mod.rs  pic.rs  pit.rs
src/interrupts/handlers/: irq0_timer.rs  irq1_keyboard.rs  mod.rs
src/interrupts/handlers/exception/: exc_6_invalid_opcode.rs  exc_e_page_fault.rs  mod.rs
src/interrupts/handlers/irq/: irq0_timer.rs  irq1_keyboard.rs  mod.rs
src/interrupts/handlers/syscall/: int80h.rs  mod.rs
src/memory/: buddy_alloc.rs  mem.rs  mod.rs
src/process/: executable.rs  memory.rs  mod.rs  proc.rs  scheduler.rs  task.rs
src/process/io/: context.rs  file_table.rs  mod.rs
src/process/ui/: context.rs  events.rs
(+7 files in other folders)
