[lib]
crate-type = ["staticlib"]

[package]
name = "kernel"
version = "0.1.0"
authors = ["AilPhaune"]
edition = "2021"

[build-dependencies]

[features]
default = []

[profile.dev]
panic = "abort"
opt-level = 0

debug = true
debug-assertions = true
overflow-checks = true
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = false
debug-assertions = false
debug = true

[dependencies]
spin = "0.10.0"
lru = "0.14.0"
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[package.metadata.cargo-xbuild.default-target]
x86_64-unknown-none = true

[package.metadata]
rustflags = ["-C", "link-args=-Tlinker.ld"]
